# Face-Recognition-Dlib-Android

./: .gitattributes  README.md  settings.gradle.kts
docs/: index.html  navigation.html
docs/lib/: package-list
docs/lib/com.appliedrec.facerecognition.dlib/: index.html
docs/lib/com.appliedrec.facerecognition.dlib/-dlib-landmarks/: -dlib-landmarks.html  close.html  create-aligned-face.html  index.html  native-context.html
docs/lib/com.appliedrec.facerecognition.dlib/-face-recognition-dlib/: close.html  compare-face-recognition-templates.html  create-face-recognition-templates.html  default-threshold.html  index.html  version.html
docs/lib/com.appliedrec.facerecognition.dlib/-face-recognition-dlib/-companion/: create.html  index.html
docs/lib/com.appliedrec.facerecognition.dlib/-face-template-dlib/: -face-template-dlib.html  equals.html  hash-code.html  index.html
docs/lib/com.appliedrec.facerecognition.dlib/-face-template-version-v16/: id.html  index.html
docs/scripts/: pages.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/androidTest/java/com/appliedrec/facerecognition/dlib/: FaceRecognitionTest.kt
lib/src/main/assets/: dlib_face_recognition_resnet_v1.onnx
lib/src/main/cpp/: CMakeLists.txt  DlibLandmarks.cpp  DlibLandmarks.h  FaceRecognition.cpp
lib/src/main/java/com/appliedrec/facerecognition/dlib/: DlibLandmarks.kt  FaceRecognitionDlib.kt  FaceTemplateDlib.kt  FaceTemplateVersionV16.kt
